k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: account-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: account-api

  template:
    metadata:
      labels:
        app: account-api

    spec:
      containers:
        - name: account-api
          image: 175562787706.dkr.ecr.ap-southeast-1.amazonaws.com/account-api:latest
          ports:
            - containerPort: 80
