k8s/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: customer-api

  template:
    metadata:
      labels:
        app: customer-api

    spec:
      containers:
        - name: customer-api
          image: 175562787706.dkr.ecr.ap-southeast-1.amazonaws.com/customer-api:latest

          ports:
            - containerPort: 80
