k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gateway

spec:
  replicas: 1

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      containers:
        - name: gateway
          image: 175562787706.dkr.ecr.ap-southeast-1.amazonaws.com/gateway:latest
          ports:
            - containerPort: 80
