k8s/customer-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: customer-api

spec:
  selector:
    app: customer-api

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
