k8s/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui-service
spec:
  type: LoadBalancer
  selector:
    app: web-ui
  ports:
    - port: 80
      targetPort: 80
