k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # ✅ AUTH (NEW)
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: customer-api
                port:
                  number: 80

          # ✅ Customers
          - path: /api/customers
            pathType: Prefix
            backend:
              service:
                name: customer-api
                port:
                  number: 80

          # ✅ Accounts
          - path: /api/accounts
            pathType: Prefix
            backend:
              service:
                name: account-api
                port:
                  number: 80

          # ✅ Transactions
          - path: /api/transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-api
                port:
                  number: 80

          # ✅ Swagger (NEW)        
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: customer-api
                port:
                  number: 80

          # ✅ UI
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-ui-service
                port:
                  number: 80
